// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate config for non-pnpm project 1`] = `
{
  "customTypes": {
    "engines": {
      "path": "engines",
      "strategy": "versionsByName",
    },
    "optional": {
      "path": "optionalDependencies",
      "strategy": "versionsByName",
    },
    "packageManager": {
      "path": "packageManager",
      "strategy": "name@version",
    },
  },
  "dependencyGroups": [
    {
      "aliasName": "react-pkgs",
      "dependencies": [
        "react",
        "react-dom",
      ],
    },
    {
      "aliasName": "vue-pkgs",
      "dependencies": [
        "vue",
        "@vue/reactivity",
        "@vue/compiler-*",
      ],
    },
    {
      "aliasName": "core-js-pkgs",
      "dependencies": [
        "core-js",
        "core-js-compat",
      ],
    },
    {
      "aliasName": "taro-pkgs",
      "dependencies": [
        "babel-preset-taro",
        "@tarojs/*",
      ],
    },
  ],
  "semverGroups": [
    {
      "dependencies": [
        "@playwright/*",
        "@sentry/*",
        "@types/react",
        "@types/react-dom",
        "playwright-*",
        "prettier",
        "react-pkgs",
        "typescript",
        "vue-pkgs",
        "vue-router",
      ],
      "range": "~",
    },
    {
      "dependencies": [
        "taro-pkgs",
      ],
      "range": "",
    },
    {
      "dependencyTypes": [
        "local",
        "optional",
        "packageManager",
      ],
      "range": "",
    },
    {
      "range": "^",
    },
  ],
  "versionGroups": [
    {
      "dependencies": [
        "abc",
      ],
      "pinVersion": "0.12.23",
    },
    {
      "dependencies": [
        "react-pkgs",
        "vue-pkgs",
        "core-js-pkgs",
        "taro-pkgs",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "preferVersion": "lowestSemver",
    },
    {
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin others",
      "preferVersion": "highestSemver",
    },
    {
      "dependencies": [
        "node",
      ],
      "dependencyTypes": [
        "engines",
      ],
      "label": "Pin engines.node",
      "pinVersion": "^16.0.0",
    },
  ],
}
`;

exports[`should generate config for pnpm project 1`] = `
{
  "customTypes": {
    "engines": {
      "path": "engines",
      "strategy": "versionsByName",
    },
    "optional": {
      "path": "optionalDependencies",
      "strategy": "versionsByName",
    },
    "packageManager": {
      "path": "packageManager",
      "strategy": "name@version",
    },
  },
  "dependencyGroups": [
    {
      "aliasName": "react-pkgs",
      "dependencies": [
        "react",
        "react-dom",
      ],
    },
    {
      "aliasName": "vue-pkgs",
      "dependencies": [
        "vue",
        "@vue/reactivity",
        "@vue/compiler-*",
      ],
    },
    {
      "aliasName": "core-js-pkgs",
      "dependencies": [
        "core-js",
        "core-js-compat",
      ],
    },
    {
      "aliasName": "taro-pkgs",
      "dependencies": [
        "babel-preset-taro",
        "@tarojs/*",
      ],
    },
  ],
  "semverGroups": [
    {
      "dependencies": [
        "@playwright/*",
        "@sentry/*",
        "@types/react",
        "@types/react-dom",
        "playwright-*",
        "prettier",
        "react-pkgs",
        "typescript",
        "vue-pkgs",
        "vue-router",
      ],
      "range": "~",
    },
    {
      "dependencies": [
        "taro-pkgs",
      ],
      "range": "",
    },
    {
      "dependencyTypes": [
        "local",
        "optional",
        "packageManager",
      ],
      "range": "",
    },
    {
      "range": "^",
    },
  ],
  "versionGroups": [
    {
      "dependencies": [
        "$LOCAL",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin pnpm workspace",
      "pinVersion": "workspace:^",
    },
    {
      "dependencies": [
        "typescript",
        "vue",
      ],
      "dependencyTypes": [
        "dev",
        "prod",
        "optional",
        "peer",
        "overrides",
        "pnpmOverrides",
        "resolutions",
      ],
      "label": "Pin pnpm catalog ",
      "pinVersion": "catalog:",
    },
    {
      "dependencies": [
        "eslint",
      ],
      "dependencyTypes": [
        "dev",
        "prod",
        "optional",
        "peer",
        "overrides",
        "pnpmOverrides",
        "resolutions",
      ],
      "label": "Pin pnpm catalog overrides",
      "pinVersion": "catalog:overrides",
    },
    {
      "dependencies": [
        "abc",
      ],
      "pinVersion": "0.12.23",
    },
    {
      "dependencies": [
        "react-pkgs",
        "vue-pkgs",
        "core-js-pkgs",
        "taro-pkgs",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "preferVersion": "lowestSemver",
    },
    {
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin others",
      "preferVersion": "highestSemver",
    },
    {
      "dependencies": [
        "node",
      ],
      "dependencyTypes": [
        "engines",
      ],
      "label": "Pin engines.node",
      "pinVersion": "^18.0.0",
    },
  ],
}
`;

exports[`should handle empty workspace and catalog 1`] = `
{
  "customTypes": {
    "engines": {
      "path": "engines",
      "strategy": "versionsByName",
    },
    "optional": {
      "path": "optionalDependencies",
      "strategy": "versionsByName",
    },
    "packageManager": {
      "path": "packageManager",
      "strategy": "name@version",
    },
  },
  "dependencyGroups": [
    {
      "aliasName": "react-pkgs",
      "dependencies": [
        "react",
        "react-dom",
      ],
    },
    {
      "aliasName": "vue-pkgs",
      "dependencies": [
        "vue",
        "@vue/reactivity",
        "@vue/compiler-*",
      ],
    },
    {
      "aliasName": "core-js-pkgs",
      "dependencies": [
        "core-js",
        "core-js-compat",
      ],
    },
    {
      "aliasName": "taro-pkgs",
      "dependencies": [
        "babel-preset-taro",
        "@tarojs/*",
      ],
    },
  ],
  "semverGroups": [
    {
      "dependencies": [
        "@playwright/*",
        "@sentry/*",
        "@types/react",
        "@types/react-dom",
        "playwright-*",
        "prettier",
        "react-pkgs",
        "typescript",
        "vue-pkgs",
        "vue-router",
      ],
      "range": "~",
    },
    {
      "dependencies": [
        "taro-pkgs",
      ],
      "range": "",
    },
    {
      "dependencyTypes": [
        "local",
        "optional",
        "packageManager",
      ],
      "range": "",
    },
    {
      "range": "^",
    },
  ],
  "versionGroups": [
    {
      "dependencies": [
        "$LOCAL",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin pnpm workspace",
      "pinVersion": "workspace:^",
    },
    {
      "dependencies": [
        "abc",
      ],
      "pinVersion": "0.12.23",
    },
    {
      "dependencies": [
        "react-pkgs",
        "vue-pkgs",
        "core-js-pkgs",
        "taro-pkgs",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "preferVersion": "lowestSemver",
    },
    {
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin others",
      "preferVersion": "highestSemver",
    },
    {
      "dependencies": [
        "node",
      ],
      "dependencyTypes": [
        "engines",
      ],
      "label": "Pin engines.node",
      "pinVersion": "^20.0.0",
    },
  ],
}
`;

exports[`should handle file read errors 1`] = `
{
  "customTypes": {
    "engines": {
      "path": "engines",
      "strategy": "versionsByName",
    },
    "optional": {
      "path": "optionalDependencies",
      "strategy": "versionsByName",
    },
    "packageManager": {
      "path": "packageManager",
      "strategy": "name@version",
    },
  },
  "dependencyGroups": [
    {
      "aliasName": "react-pkgs",
      "dependencies": [
        "react",
        "react-dom",
      ],
    },
    {
      "aliasName": "vue-pkgs",
      "dependencies": [
        "vue",
        "@vue/reactivity",
        "@vue/compiler-*",
      ],
    },
    {
      "aliasName": "core-js-pkgs",
      "dependencies": [
        "core-js",
        "core-js-compat",
      ],
    },
    {
      "aliasName": "taro-pkgs",
      "dependencies": [
        "babel-preset-taro",
        "@tarojs/*",
      ],
    },
  ],
  "semverGroups": [
    {
      "dependencies": [
        "@playwright/*",
        "@sentry/*",
        "@types/react",
        "@types/react-dom",
        "playwright-*",
        "prettier",
        "react-pkgs",
        "typescript",
        "vue-pkgs",
        "vue-router",
      ],
      "range": "~",
    },
    {
      "dependencies": [
        "taro-pkgs",
      ],
      "range": "",
    },
    {
      "dependencyTypes": [
        "local",
        "optional",
        "packageManager",
      ],
      "range": "",
    },
    {
      "range": "^",
    },
  ],
  "versionGroups": [
    {
      "dependencies": [
        "abc",
      ],
      "pinVersion": "0.12.23",
    },
    {
      "dependencies": [
        "react-pkgs",
        "vue-pkgs",
        "core-js-pkgs",
        "taro-pkgs",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "preferVersion": "lowestSemver",
    },
    {
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin others",
      "preferVersion": "highestSemver",
    },
    {
      "dependencies": [
        "node",
      ],
      "dependencyTypes": [
        "engines",
      ],
      "label": "Pin engines.node",
      "pinVersion": "^20.0.0",
    },
  ],
}
`;

exports[`should merge custom config 1`] = `
{
  "customTypes": {
    "custom": {
      "path": "customPath",
      "strategy": "customStrategy",
    },
    "engines": {
      "path": "engines",
      "strategy": "versionsByName",
    },
    "optional": {
      "path": "optionalDependencies",
      "strategy": "versionsByName",
    },
    "packageManager": {
      "path": "packageManager",
      "strategy": "name@version",
    },
  },
  "dependencyGroups": [
    {
      "aliasName": "react-pkgs",
      "dependencies": [
        "react",
        "react-dom",
      ],
    },
    {
      "aliasName": "vue-pkgs",
      "dependencies": [
        "vue",
        "@vue/reactivity",
        "@vue/compiler-*",
      ],
    },
    {
      "aliasName": "core-js-pkgs",
      "dependencies": [
        "core-js",
        "core-js-compat",
      ],
    },
    {
      "aliasName": "taro-pkgs",
      "dependencies": [
        "babel-preset-taro",
        "@tarojs/*",
      ],
    },
  ],
  "semverGroups": [
    {
      "dependencies": [
        "custom-dep",
      ],
      "range": "~",
    },
    {
      "dependencies": [
        "@playwright/*",
        "@sentry/*",
        "@types/react",
        "@types/react-dom",
        "playwright-*",
        "prettier",
        "react-pkgs",
        "typescript",
        "vue-pkgs",
        "vue-router",
      ],
      "range": "~",
    },
    {
      "dependencies": [
        "taro-pkgs",
      ],
      "range": "",
    },
    {
      "dependencyTypes": [
        "local",
        "optional",
        "packageManager",
      ],
      "range": "",
    },
    {
      "range": "^",
    },
  ],
  "versionGroups": [
    {
      "dependencies": [
        "$LOCAL",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin pnpm workspace",
      "pinVersion": "workspace:^",
    },
    {
      "dependencies": [
        "custom-version",
      ],
      "label": "Custom Version",
    },
    {
      "dependencies": [
        "react-pkgs",
        "vue-pkgs",
        "core-js-pkgs",
        "taro-pkgs",
      ],
      "dependencyTypes": [
        "!local",
      ],
      "preferVersion": "lowestSemver",
    },
    {
      "dependencyTypes": [
        "!local",
      ],
      "label": "Pin others",
      "preferVersion": "highestSemver",
    },
    {
      "dependencies": [
        "node",
      ],
      "dependencyTypes": [
        "engines",
      ],
      "label": "Pin engines.node",
      "pinVersion": "^20.0.0",
    },
  ],
}
`;
